commentManifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
      - name: comment
        image: choiyoorim/comment:latest
        ports:
        - containerPort: 8081 # 내부 컨테이너 포트
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comment
spec:
  selector:
    app: comment
  ports:
  - protocol: TCP
    port: 3000 # 외부에 노출할 포트
    targetPort: 8081 # 컨테이너 내부 포트
  type: ClusterIP
