emoticonManifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emoticon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoticon
  template:
    metadata:
      labels:
        app: emoticon
    spec:
      containers:
      - name: emoticon
        image: choiyoorim/emoticon:latest
        ports:
        - containerPort: 8081 # 내부 컨테이너 포트
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: emoticon
spec:
  selector:
    app: emoticon
  ports:
  - protocol: TCP
    port: 3000 # 외부에 노출할 포트
    targetPort: 8081 # 컨테이너 내부 포트
  type: ClusterIP
