friendManifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friend
  template:
    metadata:
      labels:
        app: friend
    spec:
      containers:
      - name: friend
        image: choiyoorim/friend:latest
        ports:
        - containerPort: 8081 # 내부 컨테이너 포트
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: friend
spec:
  selector:
    app: friend
  ports:
  - protocol: TCP
    port: 3000 # 외부에 노출할 포트
    targetPort: 8081 # 컨테이너 내부 포트
  type: ClusterIP
