viewManifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: view
spec:
  replicas: 1
  selector:
    matchLabels:
      app: view
  template:
    metadata:
      labels:
        app: view
    spec:
      containers:
      - name: view
        image: choiyoorim/view:latest
        resources: 
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - containerPort: 8081 # 내부 컨테이너 포트
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: view
spec:
  selector:
    app: view
  ports:
  - protocol: TCP
    port: 3000 # 외부에 노출할 포트
    targetPort: 8081 # 컨테이너 내부 포트
  type: ClusterIP
