ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /user/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: user
            port:
              number: 3000
      - path: /comment/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: comment
            port:
              number: 3000
      - path: /emoticon/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: emoticon
            port:
              number: 3000
      - path: /consumptions/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: consumptions
            port:
              number: 3000
      - path: /friends/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: friend
            port:
              number: 3000
      - path: /view/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: view
            port:
              number: 3000
